# mpwavelets

./: .gitattributes  .gitignore  Dockerfile  Makefile  README.md  fly.toml  main.py  pyproject.toml  regression.py  requirements.txt
.cursor/rules/: python.mdc
.streamlit/: config.toml
latex/: _wavelets-part1-b.docx  convert_docx.sh  convert_docx_advanced.sh  ~$velets-part1.docx
latex/.cursor/rules/: markdown.mdc
latex/part1/: convert.sh  convert_docx_final.sh  create_reference_docx.py  references.bib  wavelets-part1.aux  wavelets-part1.tex
latex/part1/md/: wavelets-part1.md
notebooks/: mp-spectras.ipynb  orthonormality.ipynb  pulse-samples.ipynb  utils.ipynb
records/: tarquis5
results/dmfs/: pulses_0.0001.csv  pulses_0.01.csv  pulses_0.02.csv  pulses_0.03.csv  pulses_0.04.csv  pulses_0.05.csv  pulses_0.06.csv  pulses_0.07.csv  pulses_0.08.csv  pulses_0.09.csv  pulses_0.1.csv  pulses_0.15.csv  pulses_0.2.csv  pulses_0.3.csv
results/saratios/: pulses_0.01.csv  pulses_0.02.csv  pulses_0.03.csv  pulses_0.04.csv  pulses_0.05.csv  pulses_0.06.csv  pulses_0.07.csv  pulses_0.08.csv  pulses_0.09.csv  pulses_0.1.csv  pulses_0.15.csv  pulses_0.2.csv  pulses_0.3.csv
results/saratios/a=0.000_b=2.000/: pulses_0.05.csv
results/saratios/a=0.000_b=2.100/: pulses_0.05.csv
results/spectra/: pulses_0.0001.csv  pulses_0.01.csv  pulses_0.02.csv  pulses_0.03.csv  pulses_0.04.csv  pulses_0.05.csv  pulses_0.06.csv  pulses_0.07.csv  pulses_0.08.csv  pulses_0.09.csv  pulses_0.1.csv  pulses_0.15.csv  pulses_0.2.csv  pulses_0.3.csv
src/: utils.py
(+875 files in other folders)
