[project]
name = "mpwavelets"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "polars>=1.27.1",
    "streamlit>=1.44.1",
    "seaborn>=0.13.2",
    "numpy>=1.24.0",
    "scipy==1.15.0",
    "pandas>=2.0.0",
    "plotly>=5.18.0",
    "statsmodels>=0.14.0",
]
