[project]
name = "mpwavelets"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = "==3.13.0"
dependencies = [
    "streamlit==1.44.1",
    "seaborn==0.13.2",
    "numpy==1.26.4",
    "scipy==1.15.0",
    "pandas==2.2.3",
    "plotly==6.1.2",
    "statsmodels==0.14.4",
    "kaleido==0.2.1",
    "matplotlib==3.10.1",
    "altair==5.5.0",
    "pyarrow==19.0.1",
]
